--- a/package.json
+++ b/package.json
@@ -58,12 +58,14 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^4.2.1",
     "eslint": "^3.19.0",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-html": "^4.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "style-loader": "^1.2.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.5"
   },
