--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "eslint-config-mysticatea": "^12.0.0"
+    "eslint-config-mysticatea": "^12.0.0",
+    "lodash": "^4.17.19",
+    "redux": "^4.0.5"
   }
 }
